<resources>
    <string name="app_name">Машинное обучение</string>
    <string name="beginning">Введение</string>
    <string name="tipslearnings">Виды обучения</string>
    <string name="classtask">Задачи классификации и регрессии</string>
    <string name="about_neuro">О нейросетях</string>
    <string name="neurolearning">Обучение нейросети</string>
    <string name="examples">Примеры</string>
    <string name="back">←</string>
    <string name="go">Далее</string>
    <string name="test">Пройти тест</string>
    <string name="learn_with_teacher">Обучение с учителем</string>
    <string name="learn_without_teacher">Обучение без учителя</string>
    <string name="learn_reinforcement">Обучение с подкреплением</string>
    <string name="content">Содержание:</string>
    <string name="smile">Смайлик:</string>
    <string name="change_theme">Смена темы</string>
    <string name="gmail">neuralguyy@gmail.com</string>
    <string name="copy">Копировать</string>
    <string name="linear">Линейная</string>
    <string name="not_linear">Не линейная</string>
    <string name="settings">Настройки</string>
    <string name="font_size">Размер шрифта</string>
    <string name="language">Язык</string>
    <string name="font">Шрифт</string>
    <string name="one_ten">1/10</string>
    <string name="two_ten">2/10</string>
    <string name="three_ten">3/10</string>
    <string name="four_ten">4/10</string>
    <string name="five_ten">5/10</string>
    <string name="six_ten">6/10</string>
    <string name="seven_ten">7/10</string>
    <string name="eight_ten">8/10</string>
    <string name="nine_ten">9/10</string>
    <string name="ten_ten">10/10</string>
    <string name="one_five">1/5</string>
    <string name="two_five">2/5</string>
    <string name="three_five">3/5</string>
    <string name="four_five">4/5</string>
    <string name="five_five">5/5</string>
    <string name="greeting">Приветствую, дорогой читатель!</string>
    <string name="start_text">Данное приложение поможет тебе освоить основные концепции машинного обучения практически с
        нуля. В процессе чтения станут ясны такие объёмные темы, как: история зарождения машинного обучения, виды обучения
        моделей для конкретных задач, работа нейросетей и ещё много объёмных тем.</string>
    <string name="beginning_menu1"><u>1. История</u></string>
    <string name="beginning_menu2"><u>2. Актуальность</u></string>
    <string name="beginning_menu3"><u>3. Требования</u></string>
    <string name="beginning_history"><u>История</u></string>
    <string name="frenk">Фрэнк Розенблатт</string>
    <string name="artur">Артур Сэмуэл</string>
    <string name="beginning_history_text1">Машинное обучение - это область искусственного интеллекта, в которой компьютерные
        алгоритмы учатся на основе данных, чтобы выполнять задачи без явного программирования. История машинного обучения
        насчитывает более полувека и связана с различными научными открытиями, технологическими прорывами и инновационными
        идеями. Первые шаги к созданию машинного обучения были сделаны в 1950-х годах, когда ученые начали исследовать, как
        компьютеры могут извлекать знания из данных. Одним из первых методов машинного обучения был перцептрон, созданный
        Фрэнком Розенблаттом в 1957 году. Он был представлен как искусственная нейронная сеть, способная распознавать образы.</string>
    <string name="beginning_history_text2">В 1960-х годах Ричард Стивенсон разработал теорию структурного обучения, которая давала
        возможность машинам обучаться на основе классификации и оценки данных. В это же время Артур Сэмуэл начал исследовать
        игру шашки и создал первую программу для игры в них, способную учиться на своих ошибках и становиться более эффективной с каждой игрой.</string>
    <string name="beginning_test_question1">Кто создал перцептрон?</string>
    <string name="beginning_test_answer11">Фернан Лекант</string>
    <string name="beginning_test_answer12">Артур Сэмуэл</string>
    <string name="beginning_test_answer13">Фрэнк Розенблатт</string>
    <string name="beginning_test_answer14">Том Эстрем</string>
    <string name="tipslearnings_menu1"><u>1. Немного о данных</u></string>
    <string name="tipslearnings_menu2"><u>2. Обучение с учителем</u></string>
    <string name="tipslearnings_menu3"><u>3. Обучение без учителя</u></string>
    <string name="tipslearnings_menu4"><u>4. Обучение с подкреплением</u></string>
    <string name="aboutdata">Немного о данных</string>
    <string name="aboutdata_text1">Данные - это главная вещь в машинном обучении, ведь без них оно просто не имеет смысла.
        У нас могут быть самые разнообразные данные в зависимости от задачи. Они представляют собой объекты и свойства(признаки).
        Проще всего представлять данные в виде таблицы. Свойства - это столбцы таблицы, объекты - это строки таблицы.
        Очень часто набор данных называют датасетом(Dataset). Датасеты могут быть представлены в различных форматах, таких как:
        CSV(Comma-Separated Values), JSON(JavaScript Object Notation), XLSX(Excel), XML(eXtensible Markup Language). Данные
        обычно разделяют на обучающие и тестовые. На обучающих данных обучают модель, а на тестовых её проверяют.
    </string>
    <string name="data">Таблица с данными</string>
    <string name="tipslearnings_with_teacher"><u>Обучение с учителем</u></string>
    <string name="tipslearnings_with_teacher_text">Обучение с учителем является самым распространнёным видом обучения моделей.
        Это обусловлено тем, что он самый простой в понимании и реализации. Этот способ применяется в задачах, в которых мы хотим
        точно научить модель выполнять одну конкретную задачу, например: классификация и сегментация объектов на фото,
        распознавание спама, генерация текста, синтез речи, генерация и описание изображений и тд. Принцип этого
        способа заключается в том, что модели подаётся много тренировочных данных, модель обучается и начинает делать прогнозы. Данные могут
        быть самыми разными. Это зависит от цели задачи. В начале процесса она делает прогнозы случайно, пытаясь предугадать
        желаемый результат. После каждой попытки её прогноз сравнивается с реальным прогнозом, то есть тем, который мы хотим от
        неё получить и вычисляется разница между ними. Данные мы можем подавать ей одни и те же по несколько раз, но в таком
        случае нужно избегать переобучения. Переобучение - это ситуация, когда модель просто запоминает обучающие данные и
        прекрасно их прогнозирует, однако на новых данных она работает плохо, тем самым теряет обощающую способность, что
        очень плохо. Представьте что вы обучили модель различать яблоки
        на фото. Для этого вы использовали 1000 фото, при переобучении она будет распознавать яблоки только на этих
        фото, но с другими фото она будет работать неисправно. Более детально про переобучение и как его избежать описано в главе
        про работу нейронных сетей. Таким образом, метод заключается в том, что мы показываем модели правильный результат после
        каждой её попытки, она обучается и пытается в дать лучший прогноз в следущий раз.</string>
    <string name="tipslearnings_with_teacher_plus"><b>Преимущества</b>:
        \n1. Относительно лёгкая реализация
        \n2. Высокая эффективность
        \n3. Широкий спектр применения</string>
    <string name="tipslearnings_with_teacher_minus"><b>Недостатки</b>:
        \n1. Необходимо большое количество подготовленных данных
        \n2. Большие вычислительные затраты
        \n3. Есть риск переобучения</string>
    <string name="tipslearnings_without_teacher"><u>Обучение без учителя</u></string>
    <string name="tipslearnings_without_teacher_text">Обучение без учителя категорически отличается от предыдущего способа.
        Здесь модель получает данные, но не получает ответа на них, а вместо этого пытается найти среди них закономерности.
        Этот метод используется для систем рекомендаций, анализа данных в социальных сетях, медицинских анализов и во многих
        других сферах.</string>
    <string name="tipslearnings_without_teacher_plus"><b>Преимущества</b>:
        \n1. Нет нужды в больших объёмах данных, предварительно размеченных для обучения
        \n2. Возможность автоматической обработки большого количества данных без привязки к заранее заданной модели или классификации
        \n3. Возможность обнаружения новых паттернов в данных</string>
    <string name="tipslearnings_without_teacher_minus"><b>Недостатки</b>:
        \n1. Нет гарантии, что полученные результаты будут иметь практическое применение или смысл
        \n2. Нет явной цели или задачи для модели, что может затруднять интерпретацию полученных результатов
        \n3. Модели машинного обучения без учителя могут быть сложными и могут потребовать большого количества вычислительных ресурсов</string>
    <string name="tipslearnings_reinforcement"><u>Обучение с подкреплением</u></string>
    <string name="tipslearnings_reinforcement_text">Обучение с подкреплением является самым сложным в реализации и внедрении.
        В данном случае модель называется агентом, который помещается в некую среду. Среда может быть физической
        (например игрой) или абстрактной (например, алгоритмической задачей). Агент совершает какие-то действия, изучая среду.
        За некоторые действия он получает награду в виде очков, а за некоторые наказание в виде снятия очков. Смысл в том, что
        агент пытается набрать как можно больше очков. Для этого ему нужно будет выполнять определённые действия, которые
        определяем мы. Рассмотрим игру змейка, в ней за каждое съеденное яблоко агент будет получать награду, а за каждую
        смерть наказание. Со временем он научится хорошо выполнять поставленную задачу, благодаря анализу своих предыдущих
        действий и корректировке последующих. Этот алгоритм обучения является самым сложным, но самым интересным и перспективным. Этот метод используется в робототехнике, на финансовых рынках, а также с высокой вероятностью будет использоваться в будущем для логики живых существ в играх</string>
    <string name="tipslearnings_reinforcement_plus"><b>Преимущества</b>:
        \n1. Можно решать задачи, для которых сложно или невозможно создать точную математическую модель
        \n2. Алгоритмы обучения с подкреплением могут самостоятельно находить оптимальные стратегии поведения в среде, без предварительного знания о структуре среды</string>
    <string name="tipslearnings_reinforcement_minus"><b>Недостатки</b>:
        \n1. Долгое обучение
        \n2. Обучение с подкреплением требует многократного взаимодействия с окружающей средой, чтобы получить достаточное количество обучающих примеров
        \n3. Множество параметров, которые нужно настроить для лучшего результата</string>
    <string name="tipslearnings_test_question1">Какой самый распростанённый способ обучения?</string>
    <string name="tipslearnings_test_answer11">Обучение с учителем</string>
    <string name="tipslearnings_test_answer12">Обучение без учителя</string>
    <string name="tipslearnings_test_answer13">Обучение с подкреплением</string>
    <string name="tipslearnings_test_answer14">Они используются с одинаковой частотой</string>
    <string name="neuron">Нейрон</string>
</resources>