<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".TipsLearnings">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:id="@+id/themeLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:enabled="false"
                android:alpha="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/tipslearning_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/content"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:theme="@style/defaultText" />

                <TextView
                    android:id="@+id/menu1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:theme="@style/linkText"
                    android:text="@string/tipslearnings_menu1" />

                <TextView
                    android:id="@+id/menu2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:theme="@style/linkText"
                    android:text="@string/tipslearnings_menu2" />

                <TextView
                    android:id="@+id/menu3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:theme="@style/linkText"
                    android:text="@string/tipslearnings_menu3" />

                <TextView
                    android:id="@+id/menu4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:theme="@style/linkText"
                    android:text="@string/tipslearnings_menu4" />

                <TextView
                    android:id="@+id/aboutdata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:theme="@style/linkText"
                    android:text="@string/aboutdata" />

                <TextView
                    android:id="@+id/aboutdata_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutdata_text1"
                    android:theme="@style/defaultText"
                    android:layout_marginTop="15dp" />

                <ImageView
                    android:id="@+id/data_img"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/neuron"
                    app:srcCompat="@drawable/data" />

                <TextView
                    android:id="@+id/mse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/data"
                    android:theme="@style/signature" />


                <TextView
                    android:id="@+id/tipslearnings_with_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:theme="@style/linkText"
                    android:text="@string/tipslearnings_with_teacher" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipslearnings_with_teacher_text"
                    android:theme="@style/defaultText"
                    android:layout_marginTop="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:theme="@style/defaultText"
                        android:text="@string/tipslearnings_with_teacher_plus"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:theme="@style/defaultText"
                        android:text="@string/tipslearnings_with_teacher_minus"
                        android:layout_marginTop="15dp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tipslearnings_without_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:theme="@style/linkText"
                    android:text="@string/tipslearnings_without_teacher" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/defaultText"
                    android:text="@string/tipslearnings_without_teacher_text"
                    android:layout_marginTop="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:theme="@style/defaultText"
                        android:text="@string/tipslearnings_without_teacher_plus"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:theme="@style/defaultText"
                        android:text="@string/tipslearnings_without_teacher_minus"
                        android:layout_marginTop="15dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tipslearnings_reinforcement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:theme="@style/linkText"
                    android:text="@string/tipslearnings_reinforcement" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/defaultText"
                    android:text="@string/tipslearnings_reinforcement_text"
                    android:layout_marginTop="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:theme="@style/defaultText"
                        android:text="@string/tipslearnings_reinforcement_plus"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:theme="@style/defaultText"
                        android:text="@string/tipslearnings_reinforcement_minus"
                        android:layout_marginTop="15dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabScrollToTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="invisible"
            android:layout_gravity="end|top"
            android:src="@drawable/up_arrow"
            app:backgroundTint="@color/fab_button" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>